[package]
name = "tsc_c"
version = "0.1.0"
edition = "2021"

[dependencies]
cty = "0.2.2"
rssc = { git = "https://github.com/stuartcalder/rssc.git" }
tsc  = { git = "https://github.com/stuartcalder/tsc.git" }
#rssc  = { path = "../rssc" }
#tsc   = { path = "../tsc"  }

[lib]
crate-type = ["cdylib"]
name = "TSC"
path = "src/lib.rs"
